<resources>
    <string name="app_name">Sozo App</string>
    <string name="you_have_unread_notifications">You have unread notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="anime">Anime</string>
    <string name="review_of_x_by_y">Review of %1$s by %2$s</string>
    <string name="list">My List</string>
    <string name="movies">Movie</string>
    <string name="browse_anime">Browse Anime</string>
    <string name="browse">Browse</string>
    <string name="slogan">The Best Anime &amp; Manga app for Android. The Best Anime &amp; Manga app for Android</string>
    <string name="browse_manga">Browse Manga</string>
    <string name="info">Info</string>
    <string name="watch">Watch</string>
    <string name="preview_seekbar_key" translatable="false">preview_seekbar_key</string>
    <string name="preview_seekbar">Seekbar preview</string>
    <string name="preview_seekbar_desc">Enable preview thumbnail on seekbar</string>
    <string name="app_layout_key" translatable="false">app_layout_key</string>

    <string name="read">Read</string>
    <string name="filter_format">"Format : %1$s"</string>
    <string name="filter_sort">"Sort : %1$s"</string>
    <string name="filter_exclude">"Not %1$s"</string>
    <string-array name="sort_by">
        <item>Score</item>
        <item>Popular</item>
        <item>Trending</item>
        <item>A-Z</item>
        <item>Z-A</item>
        <item>What?</item>
    </string-array>
    <string-array name="tips">
        <item>You can Long Click an episode/chapter to Mark it as Read.</item>
        <item>Long Clicking Shows can directly open List Editor.</item>
        <item>There are few more easter eggs hidden in the App.</item>
        <item>Challenge: Go to the very bottom of the Popular Anime &amp; Manga</item>
        <item>Try Long Clicking the Show\'s Title.</item>
        <item>Damn, why are you wasting your Time?</item>
        <item>You can Long Click to copy this Message.</item>
        <item>OMG LOOK! YOU FOUND AN EASTER EGG!?</item>
        <item>You know who else likes this Animation?</item>
        <item>MAL support? bruh.</item>
        <item>Novels? more like NO vels.</item>
        <item>Long Click the logo to check for App Update</item>
    </string-array>
    <string name="animations">Animations</string>

    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>

    <string name="sad">X(</string>
    <string name="oh">:o</string>
    <string name="colon">" : "</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="refresh">Refresh</string>
    <string name="sort_by_release_date">Sort by Release Date</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_last_updated">Sort by Last Updated</string>
    <string name="sort_by_score">Sort by Score</string>

    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="sort_by">Sort By</string>
    <string name="genre">Categories</string>
    <string name="top_score">Top Score</string>
    <string name="updated">Recently Updated</string>
    <string name="trending_anime">Trending Anime</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="trending_manga">Trending Manga</string>
    <string name="trending_novel">Trending Novel</string>
    <string name="popular_manga">Popular Manga</string>

    <string name="username">Username</string>
    <string name="chapters_read">"Chapters Read "</string>
    <string name="episodes_watched">"Episodes Watched "</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="recommended">Recommended</string>

    <string name="get_recommendations">Watch/Read some Anime or Manga to get Recommendations</string>
    <string name="empty">All caught up, when New?</string>
    <string name="action_settings">Settings</string>

    <string name="add">Add to List</string>
    <string name="list_editor">List Editor</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="status">STATUS</string>
    <string name="status_detail">Online</string>
    <string-array name="status">
        <item>PLANNING</item>
        <item>CURRENT</item>
        <item>COMPLETED</item>
        <item>REPEATING</item>
        <item>PAUSED</item>
        <item>DROPPED</item>
    </string-array>
    <string name="progress">PROGRESS</string>
    <string name="score">SCORE</string>
    <string name="score_suffix">" / 10"</string>
    <string name="started_at">STARTED AT</string>
    <string name="completed_at">COMPLETED AT</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="name">Azamov 👁</string>
    <string name="name_romaji">Name Romaji</string>
    <string name="mean_score">Mean Score</string>
    <string name="format">Format</string>
    <string name="status_title">Status</string>
    <string name="total_eps">Total Episodes</string>
    <string name="total_chaps">Total Chapters</string>
    <string name="ep_duration">Average Duration</string>
    <string name="min">" min"</string>
    <string name="season">Season</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Source</string>
    <string name="main_studio">Studio</string>
    <string name="genres">Genres</string>
    <string name="description">Synopsis</string>
    <string name="characters">Characters</string>
    <string name="relations">Relations</string>

    <string name="roles">Roles</string>
    <string name="details">Details</string>

    <string name="play_yt">Play on Youtube</string>
    <string name="eps">Episodes</string>
    <string name="ep">Episode</string>
    <string name="chaps">Chapters</string>
    <string name="chap">Chapter</string>
    <string name="wrong"><u>Wrong Title?</u></string>
    <string name="source_not_found">
        Couldn\'t find anything X( \n
        Try another source.
    </string>
    <string name="not_supported">%1$s is not supported!</string>
    <string name="server_selector">Select Server</string>
    <string name="auto_select_server">Auto Selecting Server</string>
    <string name="make_default">Make Default</string>
    <string name="adult">Adult</string>
    <string name="list_only">List Only</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="synonyms">Synonyms</string>
    <string name="trailer">Trailer</string>
    <string name="opening">Opening</string>
    <string name="ending">Ending</string>
    <string name="prequel">Prequel</string>
    <string name="sequel">Sequel</string>
    <string name="filler">Sort &amp; Filter</string>
    <string name="grid">Grid</string>
    <string name="apply">Apply</string>
    <string name="update_now">Update Now</string>
    <string name="understand">I Understand</string>
    <string name="cancel">Cancel</string>

    <string name="anilist_settings">Anilist Settings</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="player_settings">Player Settings</string>
    <string name="recentlyListOnly">Only show My Shows in Recently Updated</string>
    <string name="download_manager_select">Download Manager</string>
    <string name="downloadInSd">Download in SD card</string>
    <string name="noSdFound">No SD card was Found.</string>
    <string name="reader_settings">Reader Settings</string>
    <string name="update_sheet">Update Available</string>
    <string name="warning_update">Read this before updating</string>
    <string name="warning_update_desc">
        You can install the new app using the APK file in the Downloads folder. Before installation, please remove the existing version !
    </string>
    <string name="default_source">Default Source</string>
    <string name="show_yt">Show Youtube Link</string>
    <string name="default_ep_view">Default Episode Layout</string>
    <string name="default_chp_view">Default Chapter Layout</string>
    <string name="ui">User Interface</string>
    <string name="common">Common</string>
    <string name="theme">Theme</string>
    <string name="ui_settings">UI Settings</string>
    <string name="about">About</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome to Sozo</string>
    <string name="oboarding_desc">The best anime app for free content watch easily</string>
    <string name="back_button">Back button</string>
    <string name="search_button">Search Button</string>
    <string name="more_button">Menu Button</string>
    <string name="phone_button">Phone Button</string>
    <string name="account">Account</string>
    <string name="phone_num">+9647712345678</string>
    <string name="change_num">Tap to change phone number</string>
    <string name="devsadeq">\@stc_android</string>
    <string name="android_developer">Android Developer</string>
    <string name="bio">Bio</string>
    <string name="icon">Icon</string>
    <string name="language">Language</string>
    <string name="devices">Devices</string>
    <string name="folders">Folders</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="help">Help</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="telegram_faq">Telegram FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="view_on_anilist">View on Anilist</string>
    <string name="copy_link">Copy Link</string>
    <string name="video">Video</string>
    <string name="skip">Skip</string>
    <string name="skip_time">Skip time</string>
    <string name="screenshots">Screenshots</string>
    <string name="something_went_wrong">Something Went Wrong</string>


</resources>