<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bottomSheerCustomTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/warning_update"
            android:textAlignment="center"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />


        <LinearLayout
            android:id="@+id/bottomDialogCustomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/update_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_bold"
            android:lineSpacingExtra="2dp"
            android:text="@string/warning_update_desc"
            android:textAlignment="center"
            android:textSize="14sp"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/okBtn"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/understand"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="?attr/colorPrimary"
                app:cornerRadius="16dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>