<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mediaListContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorOnSurface">


    <ProgressBar
        android:id="@+id/mediaListProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="invisible" />

    <LinearLayout
        android:id="@+id/mediaListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mediaTitle"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/list_editor"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/status"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"

            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="?attr/colorOutline"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/white"

            app:startIconDrawable="@drawable/ic_round_playlist_play_24"
            app:startIconTint="?attr/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/mediaListStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="false"
                android:inputType="none"
                android:padding="8dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mediaListProgressLayout"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/progress"
                android:textColorHint="?attr/colorOutline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:endIconMode="none"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOutline"
                app:hintTextColor="?attr/colorOutline"
                app:startIconDrawable="@drawable/ic_round_add_circle_outline_24"
                app:startIconTint="?attr/colorAccent"
                app:suffixTextAppearance="@style/Suffix">

                <AutoCompleteTextView
                    android:id="@+id/mediaListProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/mediaListIncrement"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="-2dp"
                android:elevation="0dp"
                android:fontFamily="@font/poppins_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="@null"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:singleLine="true"
                android:text="+1\u0020"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mediaListScoreLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:hint="@string/score"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"

            app:endIconMode="none"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="?attr/colorOutline"
            app:hintTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_round_star_24"
            app:startIconTint="?attr/colorAccent"
            app:suffixText="@string/score_suffix"
            app:suffixTextAppearance="@style/Suffix">

            <AutoCompleteTextView
                android:id="@+id/mediaListScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/color_white"
                android:textSize="14sp"
                tools:ignore="LabelFor,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/mediaListPrivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="List Private"
            android:textColor="@color/white"
            app:track="@drawable/treck_switch"
            tools:ignore="HardcodedText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mediaListSave"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="8dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="?attr/colorPrimary"
            app:cornerRadius="16dp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        app:cardBackgroundColor="@color/nav_tab"
        app:cardCornerRadius="2dp"
        app:cardElevation="0dp">

    </androidx.cardview.widget.CardView>


</FrameLayout>