<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bottomSheerCustomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="5dp"
            android:text="@string/filler"
            android:textAlignment="center"
            android:textSize="20sp" />


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/filter_type"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:clipToPadding="false"
            android:translationZ="12dp"
            android:visibility="visible"
            app:tabBackground="@null"
            app:tabGravity="fill"
            app:tabIndicator="?attr/colorOnBackground"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="?attr/colorPrimary"
            app:tabIndicatorHeight="2dp"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabRippleColor="@null"
            app:tabSelectedTextColor="?attr/titleTextColor"
            app:tabTextColor="#878787"
            tools:visibility="visible" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="Years"

                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/searchGenresGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid"
                android:textColor="@color/white"
                android:visibility="gone"
                app:thumbTint="@color/dark_200" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchFilterFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:fadingEdge="horizontal"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="6"
            tools:listitem="@layout/item_single_click" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/tags"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/searchTagsGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/grid"
                android:textColor="@color/white"
                android:visibility="gone"
                app:switchPadding="4dp"
                app:thumbTint="@color/light_grey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchFilterTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:fadeScrollbars="true"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:paddingEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="6"
            tools:listitem="@layout/item_chip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:text="Years"
                android:textSize="16sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/search_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid"
                android:textColor="@color/white"
                android:visibility="gone"
                app:thumbTint="?attr/colorSecondary" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"

            android:background="#ABABAB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchFilterCancel"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/cancel"

                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/bg_filter_dialog"
                app:cornerRadius="16dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchFilterApply"
                android:layout_width="0dp"

                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/apply"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="?attr/colorPrimary"
                app:cornerRadius="16dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>